# solid

./: .travis.yml  README.md
SolidOpt/trunk/: CMakeLists.txt  Credits.txt  Version.cmake  configure
SolidOpt/trunk/cmake/: AssemblyInfo.cs.in  BuildInfo.cs.in  CTestConfig.cmake  FindCSharp.cmake  FindDotNetFrameworkSdk.cmake  FindMSBuild.cmake  FindMono.cmake  FindTestingPrerequisites.cmake  ProjectName-v11.csproj.in  SolutionName-v11.sln.in  UseCSharp.cmake  UseMSBuild.cmake  UseMono.cmake  UseTestingPrerequisites.cmake  Vendors.cmake  Version.cmake  VisualStudioGenerator.cmake
SolidOpt/trunk/doc/: CMakeLists.txt
SolidOpt/trunk/doc/Demos/Decompiler/: Decompiler.csproj
SolidOpt/trunk/doc/doxygen/conf/: doxygen.conf  doxygen.conf.in  doxygen.intro.in  footer.html.in  header.html.in
SolidOpt/trunk/src/: CMakeLists.txt  SolidOpt-all-in-one.csproj  SolidOpt-all-in-one.sln  SolidOpt.csproj  SolidOpt.sln
SolidOpt/trunk/src/BuildInformation/: BuildInformation.csproj  CMakeLists.txt
SolidOpt/trunk/src/BuildInformation/src/: CMakeLists.txt
SolidOpt/trunk/src/Core/: CMakeLists.txt
SolidOpt/trunk/src/Core/Loader/: SolidOpt.Core.Loader.csproj
SolidOpt/trunk/src/Services/: AbstractService.cs  AbstractServiceContainer.cs  AbstractServiceProvider.cs  CMakeLists.txt  IPlugin.cs  IService.cs  IServiceContainer.cs  IServiceProvider.cs  PluginServiceContainer.cs  Service.cs  ServiceContainer.cs  ServiceProvider.cs  SolidOpt.Services.csproj
SolidOpt/trunk/src/Services/Compatibility/: CMakeLists.txt  FixEnumerableVariance.cs  SolidOpt.Services.Compatibility.csproj
SolidOpt/trunk/src/Services/Loader/: SolidOpt.Core.Loader.csproj
SolidOpt/trunk/src/Services/Subsystems/: CMakeLists.txt
SolidOpt/trunk/src/Services/Transformations/: AssemblyInfo.cs  CMakeLists.txt  ITransform.cs  Pipeline.cs  SolidOpt.Services.Transformations.csproj  Step.cs
SolidOpt/trunk/src/Services/src/: CMakeLists.txt  PluginLoader.cs  ServiceContainer.cs  ServiceProvider.cs
SolidOpt/trunk/src/vendors/: CMakeLists.txt
SolidOpt/trunk/src/vendors/Mono.Cecil/: Mono.Cecil.csproj
SolidOpt/trunk/test/SolidOpt/: SolidOpt.Tests.sln
SolidOpt/trunk/test/SolidOpt/SolidOpt.Core.Tests/: SolidOpt.Core.Tests.csproj
SolidOpt/trunk/test/SolidOpt/SolidOpt.Services.Tests/: ServiceContainerTests.cs  ServiceProviderTests.cs  ServiceTests.cs  SolidOpt.Services.Tests.csproj
SolidOpt/trunk/test/SolidTest/: SolidTest.sln
SolidOpt/trunk/tools/: createNewSolidOptProject.sh
SolidOpt/trunk/tools/RealTimeOptDesktop/src/: .actionScriptProperties  SolidOptDesktop.mxml
SolidOpt/trunk/tools/sampleProjectSkeleton/test/: CMakeLists.txt
Tools/DataMorphose/: CMakeLists.txt  Version.cmake  configure  public.snk  setenv.sh.in
Tools/DataMorphose/doc/: CMakeLists.txt
Tools/DataMorphose/plugins/: CMakeLists.txt
Tools/DataMorphose/plugins/ImportExport/src/: CMakeLists.txt  ImportExport.cs
Tools/DataMorphose/plugins/Visualizer/src/: Visualizer.cs
Tools/DataMorphose/src/: CMakeLists.txt  DataMorphose.exe.sh.in  MainWindow.cs  Program.cs
Tools/DataMorphose/src/Controller/Deduce/: ColumnConstraints.cs  ColumnType.cs
Tools/DataMorphose/src/Controller/Map/: IMap.cs
Tools/DataMorphose/src/Controller/Tools/: ITool.cs
Tools/DataMorphose/src/Controller/Transform/: SplitColumn.cs
Tools/DataMorphose/src/Controller/Validate/: IValidator.cs
Tools/DataMorphose/src/Model/: Database.cs
Tools/DataMorphose/src/Model/Meta/: Constraint.cs  MetaData.cs
Tools/DataMorphose/src/Properties/: Plugins.env.in  app.config
Tools/DataMorphose/src/gtk-gui/: DataMorphose.LoadedPlugins.cs  MainWindow.cs
Tools/DataMorphose/src/vendors/: CMakeLists.txt
Tools/DataMorphose/test/: DeduceConstraints.cs  Sort.cs
Tools/DataMorphose/trunk/: CMakeLists.txt  DataMorphose.sln  Version.cmake  setenv.sh.in
Tools/DataMorphose/trunk/doc/: CMakeLists.txt
Tools/DataMorphose/trunk/plugins/: CMakeLists.txt
Tools/DataMorphose/trunk/src/: CMakeLists.txt  DataMorphose.csproj  DataMorphose.sln  IDataMorphose.cs  LoadedPlugins.cs  MainWindow.cs  Program.cs
Tools/DataMorphose/trunk/test/: BaseTestFixture.cs  CSVImport.cs  DataMorphose.Test.csproj  DeduceConstraints.cs  DeduceType.cs  SplitColumnTest.cs  Test.cs
Tools/SampleTool/src/vendors/: CMakeLists.txt
Tools/SampleTool/trunk/src/: CMakeLists.txt  LoadedPlugins.cs  MainWindow.cs  Program.cs
Tools/SolidIDE/: CMakeLists.txt  Version.cmake  configure
Tools/SolidIDE/doc/: CMakeLists.txt
Tools/SolidIDE/plugins/: CMakeLists.txt
Tools/SolidIDE/plugins/Designer/: CMakeLists.txt  Designer.cs  IDesigner.cs  ISheet.cs  Sheet.cs
Tools/SolidIDE/plugins/Domains/: CMakeLists.txt
Tools/SolidIDE/plugins/Inspector/: CMakeLists.txt  IInspector.cs  Inspector.cs
Tools/SolidIDE/plugins/SamplePlugins/: CMakeLists.txt
Tools/SolidIDE/plugins/Timeline/: CMakeLists.txt  ITimeline.cs  Stage.cs  Timeline.cs
Tools/SolidIDE/plugins/Toolbox/: AddNewBinaryRelationCommand.cs  AddNewConnectorShapeCommand.cs  AddNewShapeCommand.cs  CMakeLists.txt  IToolbox.cs  Toolbox.cs
Tools/SolidIDE/src/: CMakeLists.txt  DomainAttribute.cs  IDomain.cs  ISolidIDE.cs  IUniverseDomain.cs  LoadedPlugins.cs  MainWindow.cs  Program.cs  ShapeNameAttribute.cs  SolidIDE.exe.sh.in  SolidIDE.icns  ToolAttribute.cs  ViewerAttribute.cs
Tools/SolidIDE/src/Properties/: Plugins.env.in
Tools/SolidIDE/src/gtk-gui/: MainWindow.cs  SolidIDE.LoadedPlugins.cs  gui.stetic
Tools/SolidIDE/src/vendors/: CMakeLists.txt
Tools/SolidReflector/src/: CMakeLists.txt  ISolidReflector.cs  LoadedPlugins.cs  MainWindow.cs  Program.cs  SolidReflector.exe.sh.in
Tools/SolidReflector/src/gtk-gui/: SolidReflector.MainWindow.cs
Tools/SolidReflector/src/vendors/: CMakeLists.txt
Tools/SolidReflector/trunk/: CMakeLists.txt  README.txt  Version.cmake  setenv.sh  setenv.sh.in
Tools/SolidReflector/trunk/doc/: CMakeLists.txt
Tools/SolidReflector/trunk/plugins/: Plugins.sln
Tools/SolidReflector/trunk/src/: CMakeLists.txt  ILWriter.cs  IPlugin.cs  MainWindow.cs  Program.cs  SolidReflector.csproj  SolidReflector.sln
(+2106 files in other folders)
